--- a/VRChat/27/932127.html
+++ b/VRChat/27/932127.html
@@ -75,9 +75,9 @@
     "viewport">
     <meta name="csrf-param" content="authenticity_token">
     <script src=
-    "https://asset.booth.pm/assets/fb659a8225f82fcde9b8.js" defer=
+    "https://asset.booth.pm/assets/39c7779328e45f19f660.js" defer=
     "defer" nonce=
-    "ZrfB+luZ6cdkTX7iwcSwpG5l2EIzuFC5/eE1W1eZRkU="></script>
+    "m2gb6ko5Ml0j6IWdGT3PqNcwfI+0SCmJOTyaKknL1Dk="></script>
     <script type="application/ld+json">
     {"@context":"https://schema.org","@type":"Product","name":"ガスマスクソルジャー","description":"2022/1/5 二回目のリメイク版を作ったので公開しました。\n2019 5/6リメイク版配布開始しました。既に購入されてる方は無料でDLできます。\n2018 7/16 モデルの修正と同梱物の追加をしました！\n\nVRchat等での使用を想定して作成した、ローポリでミリタリーな感じのモデルです。\n三形態✕7色バリエーションと小物を5点とロゴマークを同梱しています。\n\n\n内容物\n・ガスマスクソルジャー(素)\n・ガスマスクソルジャー(フードつき)\n・ガスマスクソルジャー(ヘルメットつき)\n・ガスマスク用テクスチャー7色\n・バックパック\n・ポーチ\n　　(上記2点のテクスチャーは本体と共用です)\n・拳銃\n・ショットガン\n・ライフル\n・ガスマスク Force透過png\n\n-----------------------------------------\n利用規約\n\n当規約は随時更新させていただきますので、最新の規約の確認をお願いします。\n\n許可事項\n・VRchatでの使用\n・Unity、MMDでの使用\n・ゲーム、動画、静止画での使用\n・アバターペデスタルを介しての再配布\n・R-18、R-18Gでの使用\n・当モデルの改変\n・商用利用\n\n禁止事項\n・政治的、差別的、誹謗中のための利用\n・ゲーム、映像作品、アバターペデスタルを通さない二次配布\n\n不明な点や不具合報告などございましたら、Twitter(@IspVitamin)までご連絡お願いします。\n\n初版作成_2018月7/14","url":"https://booth.pm/ja/items/932127","offers":{"priceCurrency":"JPY","@type":"Offer","price":"1500"},"image":"https://booth.pximg.net/c/620x620/529ab7c8-ac9e-418b-9cf8-c509712970e1/i/932127/b8817b24-f06e-40a3-99bd-3aadbe35b7d8_base_resized.jpg"}
     </script>
@@ -85,16 +85,13 @@
     "https://asset.booth.pm/favicon.ico">
     <link href="/static-images/pwa/icon_size_180.png" rel=
     "apple-touch-icon-precomposed">
-    <style type="text/css">
-    .eventname-flag--inner {   margin-right: 6px; }  .eventname-flag--inner.eventname-flag--exhibition-open {   margin-right: 0px; }
-    </style>
   </head>
   <body>
     <noscript><iframe height="0" src=
     "//www.googletagmanager.com/ns.html?id=GTM-WLLNDM" style=
     "display:none;visibility:hidden" width="0"></iframe></noscript>
     <script src="https://asset.booth.pm/google_tag_manager_ad.js"
-    nonce="ZrfB+luZ6cdkTX7iwcSwpG5l2EIzuFC5/eE1W1eZRkU="></script>
+    nonce="m2gb6ko5Ml0j6IWdGT3PqNcwfI+0SCmJOTyaKknL1Dk="></script>
     <div class="service-informations">
       <div class="promotion-banner"></div>
     </div>
@@ -118,6 +115,8 @@
               <div class=
               "market-item-detail-article u-d-flex u-flex-column u-pb-400 u-align-items-center">
                 <div class="container">
+                  <div class=
+                  "market-item-detail__exhibition-banner"></div>
                   <div id="js-item-order"></div>
                   <div class="u-pt-600 u-d-flex">
                     <div class=
@@ -132,7 +131,8 @@
                             "empty:hidden flex gap-4 items-center">
                               <div class="flex min-w-0">
                                 <div class="eventname-flag">
-                                  <a class="eventname-flag--inner"
+                                  <a class=
+                                  "eventname-flag--inner mr-[6px]"
                                   data-tracking="click"
                                   data-product-list=
                                   "from market_show via eventname_flag to event_index"
@@ -174,7 +174,7 @@
                           rel="nofollow" data-method="post" href=
                           "https://booth.pm/items/932127/wish_list">
                           <div class=
-                          "border-2 border-border300 box-border flex gap-4 h-[48px] items-center px-16 rounded-24 text-subtext-gray600 shop__border shop__text">
+                          "border border-border300 box-border flex gap-4 h-[48px] items-center px-16 rounded-24 text-subtext-gray600 shop__border shop__text">
                             <div class=
                             "typography-14 preserve-half-leading wishlists_count">
                               31
@@ -189,14 +189,13 @@
                           data-method="delete" href=
                           "https://booth.pm/items/932127/wish_list">
                           <div class=
-                          "border-2 border-border300 box-border flex gap-4 h-[48px] items-center px-16 rounded-24 text-subtext-gray600 shop__border shop__text">
+                          "border border-border300 box-border flex gap-4 h-[48px] items-center px-16 rounded-24 text-subtext-gray600 shop__border shop__text">
                             <div class=
                             "typography-14 preserve-half-leading wishlists_count">
                               31
                             </div>
                           </div></a>
                         </div>
-                        <div class="empty:hidden my-16"></div>
                         <div>
                           <ul class=
                           "variations u-mt-300 u-border-b" id=
