--- a/VRChat/27/931527.html
+++ b/VRChat/27/931527.html
@@ -75,9 +75,9 @@
     "viewport">
     <meta name="csrf-param" content="authenticity_token">
     <script src=
-    "https://asset.booth.pm/assets/fb659a8225f82fcde9b8.js" defer=
+    "https://asset.booth.pm/assets/39c7779328e45f19f660.js" defer=
     "defer" nonce=
-    "/Gfhv8dHSGHWa+D8i1hVoiCVKRik6/shb+VRPx/oggI="></script>
+    "34c+JlnoqZJmXsSnfSdw7M0SutY4OPyyaUx79xD5lCc="></script>
     <script type="application/ld+json">
     {"@context":"https://schema.org","@type":"Product","name":"『カフェ野ゾンビ子』未公開シーン集Season4","description":"バーチャルYoutuber『カフェ野ゾンビ子』の未公開シーン集Season4。放送に収めきれなかったヤバイシーンの詰め合わせです。（全18分）\n【EP27から】泣く泣くかっとしたしっとり歌った版のルージュの伝言\n【EP27から】ナオミを轢く瞬間をとらえた衝撃映像\n【EP28から】芝居臭かったのでカットした「ゾンビになってるんですけど」３連発\n【EP29から】踊りの練習をするも笑いまくってどうにもならないゾンビ子\n【EP30から】VRChatで他の人に初遭遇するゾンビ子（ノーカット版）\n【EP30から】湖から出られないゾンビ子（ノーカット版）\n【EP31から】日本人顔のアバターが爆発する瞬間をちょうど見逃すゾンビ子\n【EP34から】グロ過ぎる慣れ果てゾンビ子を並べる作業（ノーカット版）\n【EP35から】ナオミを動かす練習をするゾンビ子\n【EP35から】ナオミをカウンターに立たせて喜ぶゾンビ子\n【EP35から】ナオミを守る決意をするゾンビ子\n【EP36から】ナオミを完全防備するゾンビ子\n【最後にゾンビ子からコメント】","url":"https://booth.pm/ja/items/931527","offers":{"priceCurrency":"JPY","@type":"Offer","price":"500"},"image":"https://booth.pximg.net/c/620x620/734e11cf-5c50-4316-a4ec-afbde6cd103a/i/931527/d19612ed-0079-4e2a-ad1b-43971221a0da_base_resized.jpg"}
     </script>
@@ -91,7 +91,7 @@
     "//www.googletagmanager.com/ns.html?id=GTM-WLLNDM" style=
     "display:none;visibility:hidden" width="0"></iframe></noscript>
     <script src="https://asset.booth.pm/google_tag_manager_ad.js"
-    nonce="/Gfhv8dHSGHWa+D8i1hVoiCVKRik6/shb+VRPx/oggI="></script>
+    nonce="34c+JlnoqZJmXsSnfSdw7M0SutY4OPyyaUx79xD5lCc="></script>
     <div class="service-informations">
       <div class="promotion-banner"></div>
     </div>
@@ -115,6 +115,8 @@
               <div class=
               "market-item-detail-article u-d-flex u-flex-column u-pb-400 u-align-items-center">
                 <div class="container">
+                  <div class=
+                  "market-item-detail__exhibition-banner"></div>
                   <div id="js-item-order"></div>
                   <div class="u-pt-600 u-d-flex">
                     <div class=
@@ -153,7 +155,7 @@
                           rel="nofollow" data-method="post" href=
                           "https://booth.pm/items/931527/wish_list">
                           <div class=
-                          "border-2 border-border300 box-border flex gap-4 h-[48px] items-center px-16 rounded-24 text-subtext-gray600 shop__border shop__text">
+                          "border border-border300 box-border flex gap-4 h-[48px] items-center px-16 rounded-24 text-subtext-gray600 shop__border shop__text">
                             <div class=
                             "typography-14 preserve-half-leading wishlists_count">
                               32
@@ -168,14 +170,13 @@
                           data-method="delete" href=
                           "https://booth.pm/items/931527/wish_list">
                           <div class=
-                          "border-2 border-border300 box-border flex gap-4 h-[48px] items-center px-16 rounded-24 text-subtext-gray600 shop__border shop__text">
+                          "border border-border300 box-border flex gap-4 h-[48px] items-center px-16 rounded-24 text-subtext-gray600 shop__border shop__text">
                             <div class=
                             "typography-14 preserve-half-leading wishlists_count">
                               32
                             </div>
                           </div></a>
                         </div>
-                        <div class="empty:hidden my-16"></div>
                         <div>
                           <ul class=
                           "variations u-mt-300 u-border-b" id=
