--- a/VRChat/87/931487.html
+++ b/VRChat/87/931487.html
@@ -73,9 +73,9 @@
     "viewport">
     <meta name="csrf-param" content="authenticity_token">
     <script src=
-    "https://asset.booth.pm/assets/fb659a8225f82fcde9b8.js" defer=
+    "https://asset.booth.pm/assets/39c7779328e45f19f660.js" defer=
     "defer" nonce=
-    "TKpWA8NBbneQRfdatq4tbMpoo+ejfIvzgSqOd3LM+gI="></script>
+    "VG9W4ny5Q1q3Ume22YrlKoGzLnSLDEzHGFVw5kwfp2k="></script>
     <script type="application/ld+json">
     {"@context":"https://schema.org","@type":"Product","name":"ニンジャTシャツ","description":"主にVRchatでの使用を想定したTシャツの3Dモデルデータです。\n\n内容物\n・3Dモデルの.blendデータ\n・3Dモデルの.fbxデータ\n・テクスチャの.pngデータ\n・Tシャツに使用した写真と同時刻に撮っていたスクリーンショット.pngデータ\n\n利用規約\n・内容物自体の二次配布はご遠慮ください。\n・商用利用や改変等自由にご使用ください。\n・クレジット表記は不要です。","url":"https://booth.pm/ja/items/931487","offers":{"priceCurrency":"JPY","@type":"Offer","price":"100"},"image":"https://booth.pximg.net/c/620x620/dba35dca-d107-422b-b707-9076e0edd96d/i/931487/8e1be0f0-12e2-4daf-a079-9d434297b042_base_resized.jpg"}
     </script>
@@ -89,7 +89,7 @@
     "//www.googletagmanager.com/ns.html?id=GTM-WLLNDM" style=
     "display:none;visibility:hidden" width="0"></iframe></noscript>
     <script src="https://asset.booth.pm/google_tag_manager_ad.js"
-    nonce="TKpWA8NBbneQRfdatq4tbMpoo+ejfIvzgSqOd3LM+gI="></script>
+    nonce="VG9W4ny5Q1q3Ume22YrlKoGzLnSLDEzHGFVw5kwfp2k="></script>
     <div class="service-informations">
       <div class="promotion-banner"></div>
     </div>
@@ -113,6 +113,8 @@
               <div class=
               "market-item-detail-article u-d-flex u-flex-column u-pb-400 u-align-items-center">
                 <div class="container">
+                  <div class=
+                  "market-item-detail__exhibition-banner"></div>
                   <div id="js-item-order"></div>
                   <div class="u-pt-600 u-d-flex">
                     <div class=
@@ -151,7 +153,7 @@
                           rel="nofollow" data-method="post" href=
                           "https://booth.pm/items/931487/wish_list">
                           <div class=
-                          "border-2 border-border300 box-border flex gap-4 h-[48px] items-center px-16 rounded-24 text-subtext-gray600 shop__border shop__text">
+                          "border border-border300 box-border flex gap-4 h-[48px] items-center px-16 rounded-24 text-subtext-gray600 shop__border shop__text">
                             <div class=
                             "typography-14 preserve-half-leading wishlists_count">
                               14
@@ -166,14 +168,13 @@
                           data-method="delete" href=
                           "https://booth.pm/items/931487/wish_list">
                           <div class=
-                          "border-2 border-border300 box-border flex gap-4 h-[48px] items-center px-16 rounded-24 text-subtext-gray600 shop__border shop__text">
+                          "border border-border300 box-border flex gap-4 h-[48px] items-center px-16 rounded-24 text-subtext-gray600 shop__border shop__text">
                             <div class=
                             "typography-14 preserve-half-leading wishlists_count">
                               14
                             </div>
                           </div></a>
                         </div>
-                        <div class="empty:hidden my-16"></div>
                         <div>
                           <ul class=
                           "variations u-mt-300 u-border-b" id=
