--- a/VRChat/77/930477.html
+++ b/VRChat/77/930477.html
@@ -75,9 +75,9 @@
     "viewport">
     <meta name="csrf-param" content="authenticity_token">
     <script src=
-    "https://asset.booth.pm/assets/fb659a8225f82fcde9b8.js" defer=
+    "https://asset.booth.pm/assets/39c7779328e45f19f660.js" defer=
     "defer" nonce=
-    "p6eEWyluiZIbTQwVlQopk8Jy9r7QjaGH58ofG3/9hFk="></script>
+    "i00YiX0qbPnqO5SENdF92AWaGW6Gbc13YmWfXi9yFFA="></script>
     <script type="application/ld+json">
     {"@context":"https://schema.org","@type":"Product","name":"【VR アバター】オリジナル3Dモデル「Eulalia_v2」","description":"■■注意■■\nこちらのモデル更新予定ありませんので、現行VRChatへの適用はご自分で作業される必要があります。また将来的にも更新の予定ございません。\n\n\n▼このモデル\nオリジナルデザインの３Dモデル「エウラリア」です。\n\n\nVRChatアバターとして、ぜひ使ってみてくださいね。\nカラバリPSDを使って、自分だけのカラーリングで楽しんでみてください。\n※フルトラは未検証です。\n\n▼Humanoid対応です。\nVRアバター用途で検証済みですが、もちろん他の用途にもご使用いただけます。\n\n▼内容\nUnitypackage\nfbx\nカラーバリエーション作成用PSD\n利用規約\n簡易のアップロードフロー\n\n\n▼必須前提\nUnity(2017.4.15f1)\nUTS(ユニティちゃんトゥーンシェーダー2.0.5)\nVRChatSDK\n\n詳しくはReadmeに目を通してください。\n\n■フェイタルなバグなどございましたら\ntwitter「@fuhak」か、同アカウント記載のメールアドレスまで。ただし一般的な導入法は、種々のガイドサイトなどをご覧になり、ご自分で確認されてください。こちらからの案内はございません。\n\n\n修正ログ\n2018/08/12:アニーメーション、動作時のルック、フェイシャルのバグ改善\n2018/12/24:新衣装にアップグレード\n\n---------------------\n利用規約\n\n概要\n・非営利・営利目的の使用可\n・アプリケーションに本データを組み込む場合用意に抽出できないよう適切に処置すること\n・データ改変可、ただし変更後のデータに関しても作者（KMBL）が著作権を有する\n・本データ使用によって生じた損害に対して一切作者は責任を負いません\n・規約は以降も予告なく変更することがある\n・使用時点をもって本規約に同意したものとして扱う\n\n禁止\n・反社会的目的のための使用\n・データ自体を取引・譲渡を目的としてアップロード、送信、手渡しなど行うこと\n・VRChatにアップロードする際にパブリックを選択化アップロードを禁止\n※「使用」を目的としたVRChatなどのアップロード(Private)は可能\n※ただしアバターペデスタルなどは譲渡に相当するため禁止\n\n\n","url":"https://booth.pm/ja/items/930477","offers":{"priceCurrency":"JPY","@type":"Offer","price":"1800"},"image":"https://booth.pximg.net/c/620x620/a8b07444-eb5a-47bb-a437-216b673361fc/i/930477/fccff1e6-ac36-4d2e-8e8b-f3125fd1806a_base_resized.jpg"}
     </script>
@@ -85,16 +85,13 @@
     "https://asset.booth.pm/favicon.ico">
     <link href="/static-images/pwa/icon_size_180.png" rel=
     "apple-touch-icon-precomposed">
-    <style type="text/css">
-    .eventname-flag--inner {   margin-right: 6px; }  .eventname-flag--inner.eventname-flag--exhibition-open {   margin-right: 0px; }
-    </style>
   </head>
   <body>
     <noscript><iframe height="0" src=
     "//www.googletagmanager.com/ns.html?id=GTM-WLLNDM" style=
     "display:none;visibility:hidden" width="0"></iframe></noscript>
     <script src="https://asset.booth.pm/google_tag_manager_ad.js"
-    nonce="p6eEWyluiZIbTQwVlQopk8Jy9r7QjaGH58ofG3/9hFk="></script>
+    nonce="i00YiX0qbPnqO5SENdF92AWaGW6Gbc13YmWfXi9yFFA="></script>
     <div class="service-informations">
       <div class="promotion-banner"></div>
     </div>
@@ -118,6 +115,8 @@
               <div class=
               "market-item-detail-article u-d-flex u-flex-column u-pb-400 u-align-items-center">
                 <div class="container">
+                  <div class=
+                  "market-item-detail__exhibition-banner"></div>
                   <div id="js-item-order"></div>
                   <div class="u-pt-600 u-d-flex">
                     <div class=
@@ -132,7 +131,8 @@
                             "empty:hidden flex gap-4 items-center">
                               <div class="flex min-w-0">
                                 <div class="eventname-flag">
-                                  <a class="eventname-flag--inner"
+                                  <a class=
+                                  "eventname-flag--inner mr-[6px]"
                                   data-tracking="click"
                                   data-product-list=
                                   "from market_show via eventname_flag to event_index"
@@ -173,7 +173,7 @@
                           rel="nofollow" data-method="post" href=
                           "https://booth.pm/items/930477/wish_list">
                           <div class=
-                          "border-2 border-border300 box-border flex gap-4 h-[48px] items-center px-16 rounded-24 text-subtext-gray600 shop__border shop__text">
+                          "border border-border300 box-border flex gap-4 h-[48px] items-center px-16 rounded-24 text-subtext-gray600 shop__border shop__text">
                             <div class=
                             "typography-14 preserve-half-leading wishlists_count">
                               246
@@ -188,14 +188,13 @@
                           data-method="delete" href=
                           "https://booth.pm/items/930477/wish_list">
                           <div class=
-                          "border-2 border-border300 box-border flex gap-4 h-[48px] items-center px-16 rounded-24 text-subtext-gray600 shop__border shop__text">
+                          "border border-border300 box-border flex gap-4 h-[48px] items-center px-16 rounded-24 text-subtext-gray600 shop__border shop__text">
                             <div class=
                             "typography-14 preserve-half-leading wishlists_count">
                               246
                             </div>
                           </div></a>
                         </div>
-                        <div class="empty:hidden my-16"></div>
                         <div>
                           <ul class=
                           "variations u-mt-300 u-border-b" id=
