--- a/VRChat/94/923394.html
+++ b/VRChat/94/923394.html
@@ -75,9 +75,9 @@
     "viewport">
     <meta name="csrf-param" content="authenticity_token">
     <script src=
-    "https://asset.booth.pm/assets/fb659a8225f82fcde9b8.js" defer=
+    "https://asset.booth.pm/assets/39c7779328e45f19f660.js" defer=
     "defer" nonce=
-    "OgaPm6xEh9mFlUcjrH6rDtDpZsTSagkyweTLF7TEITc="></script>
+    "y57p2ssQlQ7LCG+e0MGhxdV/VWV1coN+EGzTM1hvDHg="></script>
     <script type="application/ld+json">
     {"@context":"https://schema.org","@type":"Product","name":"シンプルステンレスピアス４セット","description":"★シンプルなステンレスピアスです。\n\n１リングと、二色が設定できる２リングに加え、宝石アリナシの計４種類がはいっています。\n\nUnity上で色を変更することができます。\n宝石部分を発光させることもできます。\n\n改変自由です。さりげないワンポイントにどうぞ。","url":"https://booth.pm/ja/items/923394","offers":{"priceCurrency":"JPY","@type":"Offer","price":"100"},"image":"https://booth.pximg.net/c/620x620/b7fca586-9480-45da-aff4-af2714c85b09/i/923394/4a0ca1c2-98e1-4a08-91e3-da3d25fb5815_base_resized.jpg"}
     </script>
@@ -91,7 +91,7 @@
     "//www.googletagmanager.com/ns.html?id=GTM-WLLNDM" style=
     "display:none;visibility:hidden" width="0"></iframe></noscript>
     <script src="https://asset.booth.pm/google_tag_manager_ad.js"
-    nonce="OgaPm6xEh9mFlUcjrH6rDtDpZsTSagkyweTLF7TEITc="></script>
+    nonce="y57p2ssQlQ7LCG+e0MGhxdV/VWV1coN+EGzTM1hvDHg="></script>
     <div class="service-informations">
       <div class="promotion-banner"></div>
     </div>
@@ -115,6 +115,8 @@
               <div class=
               "market-item-detail-article u-d-flex u-flex-column u-pb-400 u-align-items-center">
                 <div class="container">
+                  <div class=
+                  "market-item-detail__exhibition-banner"></div>
                   <div id="js-item-order"></div>
                   <div class="u-pt-600 u-d-flex">
                     <div class=
@@ -158,7 +160,7 @@
                           rel="nofollow" data-method="post" href=
                           "https://booth.pm/items/923394/wish_list">
                           <div class=
-                          "border-2 border-border300 box-border flex gap-4 h-[48px] items-center px-16 rounded-24 text-subtext-gray600 shop__border shop__text">
+                          "border border-border300 box-border flex gap-4 h-[48px] items-center px-16 rounded-24 text-subtext-gray600 shop__border shop__text">
                             <div class=
                             "typography-14 preserve-half-leading wishlists_count">
                               198
@@ -173,14 +175,13 @@
                           data-method="delete" href=
                           "https://booth.pm/items/923394/wish_list">
                           <div class=
-                          "border-2 border-border300 box-border flex gap-4 h-[48px] items-center px-16 rounded-24 text-subtext-gray600 shop__border shop__text">
+                          "border border-border300 box-border flex gap-4 h-[48px] items-center px-16 rounded-24 text-subtext-gray600 shop__border shop__text">
                             <div class=
                             "typography-14 preserve-half-leading wishlists_count">
                               198
                             </div>
                           </div></a>
                         </div>
-                        <div class="empty:hidden my-16"></div>
                         <div>
                           <ul class=
                           "variations u-mt-300 u-border-b" id=
